tests/paczka1/small_fuzzy/77320776.err
Error in line 2: pZvYXT S42S 2S,5
Error in line 1: A137 S704 73,4
Error in line 8: A137 A137 66,8
